--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "axios": "^0.26.1"
   },
   "scripts": {
+    "build" : "tsc",
     "codegen": "curl -o ica-openapi.yaml https://ica.illumina.com/ica/api/swagger/openapi_public.yaml; openapi-generator generate -i ./ica-openapi.yaml -g typescript-axios"
+  },
+  "devDependencies": {
+    "typescript": "^4.6.3"
   }
 }
