--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "icats",
   "version": "1.0.0",
   "description": "Illumina Connected Analytics API wrapper in TypeScript",
-  "main": "index.js",
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "repository": "https://github.com/umccr-illumina/icats.git",
   "author": "William Putra Intan <61998484+williamputraintan@users.noreply.github.com>",
   "license": "MIT",
