--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "icats",
   "version": "1.0.0",
   "description": "Illumina Connected Analytics API wrapper in TypeScript",
-  "main": "lib/index.js",
-  "types": "lib/index.d.ts",
+  "main": "lib/main.js",
+  "types": "lib/main.d.ts",
   "repository": "https://github.com/umccr-illumina/icats.git",
   "author": "William Putra Intan <61998484+williamputraintan@users.noreply.github.com>",
   "license": "MIT",
@@ -12,7 +12,7 @@
   },
   "scripts": {
     "build" : "tsc",
-    "codegen": "curl -o ica-openapi.yaml https://ica.illumina.com/ica/api/swagger/openapi_public.yaml; openapi-generator generate -i ./ica-openapi.yaml -g typescript-axios"
+    "codegen": "curl -o ica-openapi.yaml https://ica.illumina.com/ica/api/swagger/openapi_public.yaml; openapi-generator generate -i ./ica-openapi.yaml -o ./src -g typescript-axios"
   },
   "devDependencies": {
     "typescript": "^4.6.3"
